// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chat prompt > should format prompt with system message and user-assistant-user messages 1`] = `
"### System:
you are a chatbot
### User:
1st user message
### Assistant:
assistant message
### User:
2nd user message
### Assistant:
"
`;

exports[`chat prompt > should format prompt with user message 1`] = `
"### User:
user message
### Assistant:
"
`;

exports[`chat prompt > should format prompt with user-assistant-user messages 1`] = `
"### User:
1st user message
### Assistant:
assistant message
### User:
2nd user message
### Assistant:
"
`;

exports[`instruction prompt > should format prompt with instruction 1`] = `
"### User:
instruction
### Assistant:
"
`;

exports[`instruction prompt > should format prompt with instruction and response prefix 1`] = `
"### User:
instruction
### Assistant:
response prefix"
`;

exports[`instruction prompt > should format prompt with system and instruction 1`] = `
"### System:
system
### User:
instruction
### Assistant:
"
`;

exports[`text prompt > should format prompt 1`] = `
"### User:
prompt
### Assistant:
"
`;
